# webspace-ng-legacy

./: INSTALL.md  README.md  docker-compose.yaml  requirements.txt  setup.py  unixrpc.py  webspace-cli  webspace-ng.py  webspaced  webspaced.service
app/: lxd.py  webspace.py
cli/: __init__.py  client.py
daemon/: __init__.py  webspace.py
images/: .gitignore  tutorial.yaml
nginx/: constants.lua  error.html  https_error.lua  nginx.conf.sample  ssl_backend.lua  ssl_preread.lua  unixrpc.lua  webspace_error.lua  webspace_rewrite.lua
nginx/xmlrpc/: init.lua
tcp-proxy/: Cargo.toml
tcp-proxy/src/: main.rs
webspace_ng/: __init__.py  unixrpc.py
webspace_ng/cli/: __init__.py  client.py  commands.py
webspace_ng/daemon/: __init__.py  console.py  tcp_proxy.py  webspace.py
