[package]
name = "webspace-tcp-proxy"
version = "0.1.0"
authors = ["Jack O'Sullivan <jackos1998@gmail.com>"]
edition = "2018"

[dependencies]
quick-error = "1.2"
libc = "0.2"
nix = "0.13"
futures = "0.1"
bytes = "0.4"
tokio = "0.1"
hyper = "0.12"
hyperlocal = "0.6"
xmlrpc = { version = "0.13", default-features = false, features = ["mime"] }
